<resources>
	<string name="app_name">FutharkBoard</string>
	<string name="tab_name_start">Start</string>
	
	<string name="start_about_text">Made for all the awesome people who have wished for an App like this for ages.\n~ Kim &lt;33</string>
	<string name="start_open_futharkboard_website">FutharkBoard Website</string>
	
	<string name="start_subheader_status">Status</string>
	<string name="start_status_not_enabled">FutharkBoard is not enabled in your System Settings</string>
	<string name="start_open_ime_settings">Open Input Settings</string>
	<string name="start_status_enabled">FutharkBoard is enabled</string>
	
	
	<string name="start_subheader_bugreport">Bug Report</string>
	<string name="start_bugreport_text">If you have stumbled upon a mistake or have some suggestions to make FutharkBoard better, feel free to contact me via futharkboard@drmaxnix.de.</string>
	<string name="start_bugreport_mail">Write a Mail</string>
	
	<string name="start_subheader_foss">FOSS</string>
	<string name="start_foss_text">This App is Free and OpenSource Software. Anyone can get this App for free and review the sourcecode as they like. The app is released under the MIT license by DrMaxNix.</string>
	<string name="start_foss_open_gh">View on GitHub</string>
	<string name="start_foss_open_gh_license">View License</string>
</resources>